--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
   width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 }
 
 code {
